src/snapshots/bl__tests__snapshots__cmd_mouse__click.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Click at coordinates or current position

Usage: bl mouse click [OPTIONS] [coords]...

Arguments:
  [coords]...  x and y coordinates (omit to click at the current position)

Options:
      --button <button>  Mouse button (0=left, 1=middle, 2=right) [default: 0]
  -v, --verbose          Enable debug logging
      --headless         Hide browser window (visible by default)
      --json             Output as JSON
  -h, --help             Print help

Examples:
  bl mouse click 100 200
  # Left click at (100, 200)

  bl mouse click 100 200 --button 2
  # Right click at (100, 200)

  bl mouse click
  # Left click at current position
