src/snapshots/bl__tests__snapshots__cmd_mouse__down.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Press a mouse button down

Usage: bl mouse down [OPTIONS]

Options:
      --button <button>  Mouse button (0=left, 1=middle, 2=right) [default: 0]
  -v, --verbose          Enable debug logging
      --headless         Hide browser window (visible by default)
      --json             Output as JSON
  -h, --help             Print help

Examples:
  bl mouse down
  # Press left mouse button

  bl mouse down --button 2
  # Press right mouse button
