src/snapshots/bl__tests__snapshots__cmd_mouse__move.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Move the mouse to coordinates

Usage: bl mouse move [OPTIONS] <coords> <coords>

Arguments:
  <coords> <coords>  x and y coordinates to move to

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl mouse move 100 200
  # Move mouse to position (100, 200)
